Define heketi topology
Signed-off-by: Ian Allison <iana@pims.math.ca>

--- a/ansible/roles/internal/heketi/server/templates/heketi.json.j2
+++ b/ansible/roles/internal/heketi/server/templates/heketi.json.j2
@@ -1,6 +1,6 @@
 {
   "_port_comment": "Heketi Server Port Number",
-  "port": "{{ heketi_port }}",
+  "port": "{{ heketi_server_port }}",
 
   "_use_auth": "Enable JWT authorization. Please enable for deployment",
   "use_auth": false,
